fix overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,6 @@ code {
     monospace;
 }
 
-html {
-  background-color: #1a1a1d;
-  color: #fff;
-  text-align: center;
-}
-
 h1 {
   font-size: 3rem;
 }
